--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Convert index in a string to line/column",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": {
@@ -12,6 +12,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^24.0.19",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
   }
 }
