Add repository to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "licofi",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Convert index in a string to line/column",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/vneenz/licofi"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
