--- a/bench/package.json
+++ b/bench/package.json
@@ -18,6 +18,7 @@
     "find-line-column": "^0.5.2",
     "line-column": "^1.0.2",
     "lines-and-columns": "^1.1.6",
+    "microtime": "^3.0.0",
     "simple-text-buffer": "^9.2.11",
     "string-pos": "^1.0.0",
     "vfile": "^4.1.0",
